--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
@@ -200,7 +201,7 @@
             android:theme="@style/AppTheme"/>
 
         <provider
-            android:name=".provider.GenericFileProvider"
+            android:name=".receivers.provider.GenericFileProvider"
             android:authorities="com.fieldbook.tracker.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
