--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,12 @@ android {
         }
     }
 
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode = makeVersionCode()
         versionName = makeVersionName()
         multiDexEnabled true
@@ -127,7 +127,7 @@ dependencies {
     //zebra dependency
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
 
-    implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -135,7 +135,7 @@ dependencies {
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.core:core-ktx:1.10.1"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -145,8 +145,7 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
 
-
-    //implementation('com.github.phenoapps:phenolib:v0.9.41')
+    implementation('com.github.phenoapps:phenolib:v0.9.48')
 
     implementation 'com.google.android.exoplayer:exoplayer:2.17.0'
     implementation 'com.arthenica:ffmpeg-kit-min:5.1.LTS'
