--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /app/src/main/res/values/strings*
-    translation: /app/src/main/res/values-%android_code%/%original_file_name%
+    translation: /app/src/main/res/values-%android_code%/strings.xml
