--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -40,7 +40,7 @@ jobs:
   build-and-release:
     runs-on: ubuntu-latest
     needs: check-app-changes
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && needs.check-app-changes.outputs.app_changed == 'true') }}
+    if: ${{ needs.check-app-changes.outputs.app_changed == 'true' }}
     steps:
 
       - name: Checkout repo
