--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -1,9 +1,10 @@
 on:
-  pull_request:
-    branches:
-      - main
-    paths:
-      - 'app/**'
+  workflow_dispatch:
+  #pull_request:
+  #  branches:
+  #    - main
+  #  paths:
+  #    - 'app/**'
 
 name: do-pr-prerelease
 
