--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ android {
 
     buildFeatures {
         dataBinding = true
+        viewBinding = true
     }
 
     compileOptions {
@@ -189,6 +190,13 @@ dependencies {
     //hilt dependency injection
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.test.ext:junit-ktx:1.1.4'
+
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+
+    def camerax_version = "1.0.1"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha28"
 
     kapt "com.google.dagger:hilt-compiler:2.44"
     kapt 'com.android.databinding:compiler:3.1.4'
