--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,46 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fieldbook.tracker">
 
-    <uses-feature
-        android:name="android.hardware.location"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
-
-    <!-- Wifi permissions for Android Q up -->
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-
-    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
-
-    <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true"
-        android:xlargeScreens="true" />
-
-    <!-- this tools:replace is required for tableview -->
     <application
         android:name=".application.FieldBook"
         android:hardwareAccelerated="true"
@@ -50,119 +10,102 @@
         android:label="@string/field_book"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/BaseAppTheme"
-        tools:replace="android:label"
-        tools:ignore="GoogleAppIndexingWarning">
-
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:label">
+        <activity
+            android:name=".activities.ScannerActivity"
+            android:exported="false" />
         <!-- The Main Page activity that lists all other activities -->
         <activity
             android:name=".activities.ConfigActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:exported="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--- File Import activity (field manager, local and brapi) -->
+        </activity> <!-- - File Import activity (field manager, local and brapi) -->
         <activity
             android:name=".activities.FieldEditorActivity"
             android:alwaysRetainTaskState="false"
             android:configChanges="keyboardHidden|orientation"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" />
-
-        <!-- Trait manager, for importing .trt files -->
+            android:screenOrientation="portrait" /> <!-- Trait manager, for importing .trt files -->
         <activity
             android:name=".activities.TraitEditorActivity"
             android:alwaysRetainTaskState="false"
             android:configChanges="keyboardHidden|orientation"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait" />
-
-        <!-- used to display and select a local file (found in field editor and trait editor activities) -->
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" /> <!-- used to display and select a local file (found in field editor and trait editor activities) -->
         <activity
             android:name=".activities.FileExploreActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
-            android:theme="@style/ActivityDialog" />
-
-        <!-- Main page for data collection -->
+            android:theme="@style/ActivityDialog" /> <!-- Main page for data collection -->
         <activity
             android:name=".activities.CollectActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|keyboard"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden" />
-
-        <!-- Data grid is available through the collect activity, once the setting is set -->
+            android:windowSoftInputMode="adjustPan|stateHidden" /> <!-- Data grid is available through the collect activity, once the setting is set -->
         <activity
             android:name=".activities.DataGridActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:launchMode="singleTop"/>
-
-        <!-- available within the collect activity, user can search by building sql statements -->
+            android:launchMode="singleTop" /> <!-- available within the collect activity, user can search by building sql statements -->
         <activity
             android:name=".activities.SearchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/ActivityDialog"/> <!-- this must be set here even though it uses ThemedActivity -->
-
+            android:theme="@style/ActivityDialog"
+            android:windowSoftInputMode="adjustResize" /> <!-- this must be set here even though it uses ThemedActivity -->
         <!-- The settings page, each category has its own fragment class -->
-        <activity android:name=".activities.PreferencesActivity"
+        <activity
+            android:name=".activities.PreferencesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <!-- About activity uses a library, which uses material design components, it has its own style file-->
+            android:screenOrientation="portrait"></activity> <!-- About activity uses a library, which uses material design components, it has its own style file -->
         <!-- shows version information and references to other apps, etc. -->
         <activity
             android:name=".activities.AboutActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize|locale" />
-
-        <!-- Next couple of activities are used for brapi import/export and filtering -->
+            android:configChanges="orientation|keyboardHidden|screenSize|locale" /> <!-- Next couple of activities are used for brapi import/export and filtering -->
         <activity
             android:name=".activities.brapi.BrapiActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activities.brapi.BrapiProgramActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activities.brapi.BrapiTrialActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activities.brapi.BrapiTraitActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activities.brapi.BrapiAuthActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:exported="true"
             tools:node="replace">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -173,6 +116,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -181,49 +125,41 @@
                     android:scheme="https"
                     tools:ignore="AppLinkUrlError" /> <!-- https://stackoverflow.com/questions/48093833/deeplink-empty-path-error-androidpath-cannot-be-empty -->
             </intent-filter>
-        </activity>
-
-        <!-- Handles BrAPI server authentication, shows a progress circle -->
+        </activity> <!-- Handles BrAPI server authentication, shows a progress circle -->
         <activity
             android:name="net.openid.appauth.RedirectUriReceiverActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:exported="true"
             tools:node="replace">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
                     android:host="app"
-                    android:scheme="fieldbook"
-                    android:path="/auth" />
+                    android:path="/auth"
+                    android:scheme="fieldbook" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.brapi.BrapiExportActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <!-- barcode capture activity -->
+            android:theme="@style/AppTheme"></activity> <!-- barcode capture activity -->
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            tools:replace="android:screenOrientation" />
-
-        <!-- used to define SAF storage directory, required at start of app -->
-        <activity android:name=".activities.DefineStorageActivity"/>
-
-        <!-- found in preferences, used to select a TTS language locale -->
-        <activity android:name=".activities.LocaleChoiceActivity"
-            android:theme="@style/AppTheme"/>
+            tools:replace="android:screenOrientation" /> <!-- used to define SAF storage directory, required at start of app -->
+        <activity android:name=".activities.DefineStorageActivity" /> <!-- found in preferences, used to select a TTS language locale -->
+        <activity
+            android:name=".activities.LocaleChoiceActivity"
+            android:theme="@style/AppTheme" />
 
         <provider
             android:name=".provider.GenericFileProvider"
@@ -242,10 +178,49 @@
         </intent>
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="http" />
         </intent>
         <intent>
             <action android:name="android.intent.action.GET_CONTENT" />
         </intent>
     </queries>
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> <!-- Wifi permissions for Android Q up -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
 </manifest>
