--- a/app/build.gradle
+++ b/app/build.gradle
@@ -200,6 +200,9 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
+    //androidx exif interface
+    implementation "androidx.exifinterface:exifinterface:1.3.6"
+
     // Core library
     androidTestImplementation "androidx.test:core:$coreVersion"
 
