improved fresh-install theme theme switch is now asked in storage definer as well on startup, breaking: non-eink default themed devices will see a non-green "define", "migrate" buttons now (this can be fixed but is a phenolib issue) minor refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -161,7 +161,9 @@
             tools:replace="android:screenOrientation" />
 
         <!-- used to define SAF storage directory, required at start of app -->
-        <activity android:name=".activities.DefineStorageActivity" />
+        <activity
+            android:name=".activities.DefineStorageActivity"
+            android:theme="@style/AppTheme" />
 
         <!-- found in preferences, used to select a TTS language locale -->
         <activity
