--- a/app/build.gradle
+++ b/app/build.gradle
@@ -203,6 +203,12 @@ dependencies {
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // Retrofit with Scalar Converter
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'junit:junit:4.13.2'
