--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -52,6 +52,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
