--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,7 +149,12 @@ dependencies {
 
     implementation('com.github.phenoapps:phenolib:v0.9.51-SNAPSHOT')
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    //implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    implementation 'androidx.media3:media3-exoplayer:1.3.0'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.3.0'
+    implementation 'androidx.media3:media3-ui:1.3.0'
+    implementation 'androidx.media3:media3-common:1.3.0'
+
     implementation 'com.arthenica:ffmpeg-kit-min:5.1.LTS'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
 
