--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,6 +221,10 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
+    <uses-feature android:name="android.software.companion_device_setup" />
+    <uses-feature android:name="android.hardware.usb.host" android:required="false"/>
+
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
