--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ android {
         release {
             minifyEnabled false
             debuggable false
-            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.debug
             //signingConfig signingConfigs.playStoreConfig //Add your own signing config
         }
 
