--- a/app/build.gradle
+++ b/app/build.gradle
@@ -224,6 +224,9 @@ dependencies {
     implementation 'com.kizitonwose.calendar:view:2.5.0'
     implementation 'com.kizitonwose.calendar:compose:2.5.0'
 
+    // Calendar date range picker library
+    implementation 'io.github.architshah248.calendar:awesome-calendar:2.0.0'
+
     // Core library
     androidTestImplementation "androidx.test:core:$coreVersion"
 
