--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
+        with:          
+          token: ${{secrets.ACTIONS_PAT}}
           fetch-depth: 0
 
       - name: Check if app directory changed
