--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -172,11 +172,11 @@ jobs:
             echo "UPLOAD_TO_PLAY_STORE=true" >> $GITHUB_ENV
           fi
     
-      - name: Release APK to Play Store
-        if: env.UPLOAD_TO_PLAY_STORE == 'true'
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: com.fieldbook.tracker
-          releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          track: alpha
+      #- name: Release APK to Play Store
+      #  if: env.UPLOAD_TO_PLAY_STORE == 'true'
+      #  uses: r0adkll/upload-google-play@v1
+      #  with:
+      #    serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+      #    packageName: com.fieldbook.tracker
+      #    releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+      #    track: alpha
